User verify method swagger url changed
